# TestManager

./: .gitignore  README.md  TestManager.sln
TestManager.Api/: Program.cs  TestManager.Api.csproj  appsettings.json
TestManager.Api/Controllers/: TestsController.cs
TestManager.Api/Properties/: launchSettings.json
TestManager.Application/: TestManager.Application.csproj
TestManager.Application/DTOs/: AnswerOptionDto.cs  CreateTestRequest.cs  QuestionDto.cs  SubmitTestAttemptRequest.cs  SubmittedQuestionAnswerDto.cs  TakeAnswerOptionDto.cs  TakeQuestionDto.cs  TakeTestDto.cs  TestAttemptResultDto.cs  TestDetailsDto.cs  TestListItemDto.cs  UpdateTestRequest.cs
TestManager.Application/Repositories/: ITestRepository.cs
TestManager.Application/Services/: ITestService.cs  TestService.cs
TestManager.Domain/Entities/: AnswerOption.cs  Question.cs  QuestionType.cs  Test.cs
TestManager.Infrastructure/: TestManager.Infrastructure.csproj
TestManager.Infrastructure/Persistence/: AppDbContext.cs  DemoDataSeeder.cs
TestManager.Infrastructure/Persistence/Migrations/: 20260519195555_InitialCreate.Designer.cs  20260519195555_InitialCreate.cs  20260519210122_AddTestDescription.Designer.cs  20260519210122_AddTestDescription.cs  (+1 more)
TestManager.Infrastructure/Repositories/: TestRepository.cs
frontend/test-manager-desktop/: .gitignore  index.html  package-lock.json  package.json
frontend/test-manager-desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/test-manager-desktop/src-tauri/capabilities/: default.json
frontend/test-manager-desktop/src-tauri/src/: main.rs
(+19 files in other folders)
